--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -12,8 +12,9 @@
     <div class="offset-md-2 col-lg-9">
       <div class="page-header">
         <h1>
-          Todo List Modify<b> santosh morla</b> 
+          Todo List Modify
         </h1>
+       
       </div>
     </div>
   </div>
@@ -32,6 +33,9 @@
               Add
             </button>
           </div>
+        </div>
+        <div>
+         <a href="www.google.com">Google</a>
         </div>
       </form>
     </div>
